--- a/example.tex
+++ b/example.tex
@@ -6,6 +6,7 @@
 \renewcommand{\arraystretch}{1}
 \usepackage{url}
 \usepackage{listings} 
+\usepackage[colorlinks,linkcolor=blue]{hyperref}
 \title{基于Mediachain的数字媒体知识产权交易系统}
 \tihao{A}
 %\baominghao{4321}
@@ -635,4 +636,21 @@ step3：在判断y是否属于这个集合时，我们对y应用k次哈希函数
 \section{总结}
 
 \section*{附件：项目建议书}
+
+[1]Juan Benet.IPFS-Content Addressed,Versioned,P2P Files System [J].arXiv:14073561v1,14 Jul 2014.
+
+[2]Andrea Corbellini.Elliptic.Curve Cryptography: a gentle introduction [EB\ OL].url{ http://andrea.corbellini.name}
+
+[3] Nakamoto, Satoshi. Bitcoin: A peer-to-peer electronic cash system. [R].2008.
+
+[4]吴健,高力,朱静宁.基于区块链技术的数字版权保护[J].广播电视信息,2016(07):60-62.
+
+[5] [EB\ OL].url{http://docs.mediachain.io/}
+
+[6]张方国.基于椭圆曲线的数字签名与盲签名[J].山东大学学报(理学版),2013,48(05):1-13.
+
+[7] YOSHIDAH,BIRYUKOVA.AnalysisofaSHA-256variant[C]//
+SelectedAreasinCryptography(SAC2005),Kingston,Ontario,2005:
+245-260
+
 \end{document} 
